--- a/F7-Revisiting-Concepts/views/index.ejs
+++ b/F7-Revisiting-Concepts/views/index.ejs
@@ -22,7 +22,10 @@
                 <% files.forEach(function(val){ %>
                     <div class="task w-72 px-3 py-4 rounded-md bg-zinc-800">
                         <h1 class="text-white text-3xl tracking-tighter"> <%= val %></h1>
-                        <a class="text-blue-500 inline-block mt-3" href="/file/<%= val %>">Read more.</a>
+                        <div class="flex w-full justify-between items-center mt-3">
+                            <a class="text-blue-500 inline-block" href="/file/<%= val %>">Read more.</a>
+                            <a class="text-zinc-600" href="/edit/<%= val %>">edit filename</a>
+                        </div>
                     </div>
                 <% }) %>
             <% } else { %>
